tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_del6.qml
import QtQuick
Item {
    width: 100th: 100
        height: 100
    }
}
